@@ -1,5 +1,5 @@
 \."#############################################################################
-\."$Id: cerebro_module.3.in,v 1.6 2005-07-22 17:21:07 achu Exp $
+\."$Id: cerebro_module.3.in,v 1.7 2005-08-18 22:57:08 achu Exp $
 \."#############################################################################
 \."  Copyright (C) 2005 The Regents of the University of California.
 \."  Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
@@ -89,8 +89,8 @@ the options specified in the configuration file.
 
 The following config modules are distributed:
 
-.ie @MANPAGE_GENDERSLLNL@ \{
-gendersllnl - Configures 
+.ie @MANPAGE_CHAOS_CONFIG@ \{
+Chaos - Configures 
 .B Cerebro specifically for use on LLNL clusters.
 
 \}
