@@ -1,5 +1,5 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.13 2005-06-27 04:44:49 achu Exp $
+## $Id: Makefile.am,v 1.14 2005-08-18 22:57:08 achu Exp $
 ##*****************************************************************************
 ## Process this file with automake to produce Makefile.in.
 ##*****************************************************************************
@@ -9,22 +9,22 @@ CONFIG_VERSION_SCRIPT = $(srcdir)/config.map
 CONFIG_OTHER_FLAGS = -Wl,--version-script=$(CONFIG_VERSION_SCRIPT)
 endif
 
-if WITH_GENDERSLLNL
-GENDERSLLNL_CONFIG_MODULE = cerebro_config_gendersllnl.la
+if WITH_CHAOS_CONFIG
+CHAOS_CONFIG_MODULE = cerebro_config_chaos.la
 endif
 
 modulelibdir = $(CEREBRO_MODULE_DIR)
-modulelib_LTLIBRARIES = $(GENDERSLLNL_CONFIG_MODULE)
+modulelib_LTLIBRARIES = $(CHAOS_CONFIG_MODULE)
 
 MODULE_FLAGS = -module -avoid-version
 
-cerebro_config_gendersllnl_la_SOURCES = cerebro_config_gendersllnl.c
-cerebro_config_gendersllnl_la_LDFLAGS = $(MODULE_FLAGS) \
-				 	$(GENDERSLLNL_LIBS) \
-				 	$(CONFIG_OTHER_FLAGS)
-cerebro_config_gendersllnl_la_CFLAGS  = -I$(srcdir)/../../libs/include \
-					-I$(srcdir)/../../libs/debug
-cerebro_config_gendersllnl_la_LIBADD  = ../../libs/debug/libdebug.la
+cerebro_config_chaos_la_SOURCES = cerebro_config_chaos.c
+cerebro_config_chaos_la_LDFLAGS = $(MODULE_FLAGS) \
+				  $(CHAOS_CONFIG_LIBS) \
+				  $(CONFIG_OTHER_FLAGS)
+cerebro_config_chaos_la_CFLAGS  = -I$(srcdir)/../../libs/include \
+				  -I$(srcdir)/../../libs/debug
+cerebro_config_chaos_la_LIBADD  = ../../libs/debug/libdebug.la
 
 ../../libs/debug/libdebug.la : force-dependency-check
 	@cd `dirname $@` && make `basename $@`
